# wavespin

./: .gitignore  CITATION.cff  README.md  classicalMontecarlo.py  classicalPhaseDiagram.py  dataFigPresentation.npz  progress.md  pyproject.toml  requirements.txt  staticDispersion.py  staticOpenCorrelator.py
Inputs/: diamond_shape.txt  old_square_shape.txt  square_shape.txt  square_shape_reduced.txt
PlotThesis/: ThetaPlotPresentation.py  awesomeFunctions.py  classicalMagnetization.py  firstOrderDecay.py  lifetimeMagnons.py  magnonContributions.py  periodicDispersions.py  secondOrderDecay.py  temperatureEstimation.py  zzCorrelator.py
examples/: 10_plotOpenDispersions.py  11_plotTempLinewidth.py  1_classicalPhaseDiagram.py  2_classicalMontecarlo.py  3_staticDispersion.py  4_staticOpenCorrelators.py  5_staticWavefunctions.py  6_staticPeriodicCorrelator.py  7_classicalThetaMinimization.py  8_magnonLifetime.py  9_plotContributions.py  classicalPhaseDiagram.py  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  staticDispersion.py  staticOpenCorrelator.py  staticOpenCorrelators.py
plotThesis/: JordanWignerZZ.py  awesomeFunctions.py  firstOrderDecay.py  lifetimeMagnons.py  magnonContributions.py  periodicDispersions.py  secondOrderDecay.py
scripts/: 7x9_wavefunction.npy  7x9_zz_example.npy  CorbinoGeometry.py  DAT.py  README.md  awesomeFunctionsNormalization.py  bands.py  data  dctFind.py  decayBranches.py  finiteJ2.py  functions.py  hDecayRates.py  identifyMomentum.py  inputJJbonds.txt  inputLineWidth.txt  inputRef.txt  jjBonds.py  (+16 more)
(+29 files in other folders)
